src/Hack/Parser/ILParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.11.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\IL.g4 by ANTLR 4.11.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.11.1")]
public partial class ILParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, SEGMENT=14, UINT=15, COMMENT=16, 
		WS=17;
	public const int
		RULE_function = 0, RULE_command = 1;
	public static readonly string[] ruleNames = {
		"function", "command"
	};

	private static readonly string[] _LiteralNames = {
		null, "'push'", "'constant'", "'static'", "'pop'", "'add'", "'sub'", "'neg'", 
		"'eq'", "'gt'", "'lt'", "'and'", "'or'", "'not'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "SEGMENT", "UINT", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "IL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ILParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ILParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ILParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FunctionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 0, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 5;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 4;
				command();
				}
				}
				State = 7;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 16370L) != 0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PopStaticContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopStaticContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopStatic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopStatic(this);
		}
	}
	public partial class AddContext : CommandContext {
		public AddContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterAdd(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitAdd(this);
		}
	}
	public partial class PopDynamicContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEGMENT() { return GetToken(ILParser.SEGMENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopDynamicContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopDynamic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopDynamic(this);
		}
	}
	public partial class SubContext : CommandContext {
		public SubContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterSub(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitSub(this);
		}
	}
	public partial class PushStaticContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushStaticContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushStatic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushStatic(this);
		}
	}
	public partial class OrContext : CommandContext {
		public OrContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterOr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitOr(this);
		}
	}
	public partial class LtContext : CommandContext {
		public LtContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterLt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitLt(this);
		}
	}
	public partial class PopConstantContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopConstantContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopConstant(this);
		}
	}
	public partial class EqContext : CommandContext {
		public EqContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterEq(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitEq(this);
		}
	}
	public partial class GtContext : CommandContext {
		public GtContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterGt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitGt(this);
		}
	}
	public partial class PushDynamicContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEGMENT() { return GetToken(ILParser.SEGMENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushDynamicContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushDynamic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushDynamic(this);
		}
	}
	public partial class NegContext : CommandContext {
		public NegContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterNeg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitNeg(this);
		}
	}
	public partial class NotContext : CommandContext {
		public NotContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterNot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitNot(this);
		}
	}
	public partial class PushConstantContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushConstantContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushConstant(this);
		}
	}
	public partial class AndContext : CommandContext {
		public AndContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterAnd(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitAnd(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 36;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new PushConstantContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 9;
				Match(T__0);
				State = 10;
				Match(T__1);
				State = 11;
				Match(UINT);
				}
				break;
			case 2:
				_localctx = new PushStaticContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 12;
				Match(T__0);
				State = 13;
				Match(T__2);
				State = 14;
				Match(UINT);
				}
				break;
			case 3:
				_localctx = new PushDynamicContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 15;
				Match(T__0);
				State = 16;
				Match(SEGMENT);
				State = 17;
				Match(UINT);
				}
				break;
			case 4:
				_localctx = new PopConstantContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 18;
				Match(T__3);
				State = 19;
				Match(T__1);
				State = 20;
				Match(UINT);
				}
				break;
			case 5:
				_localctx = new PopStaticContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 21;
				Match(T__3);
				State = 22;
				Match(T__2);
				State = 23;
				Match(UINT);
				}
				break;
			case 6:
				_localctx = new PopDynamicContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 24;
				Match(T__3);
				State = 25;
				Match(SEGMENT);
				State = 26;
				Match(UINT);
				}
				break;
			case 7:
				_localctx = new AddContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 27;
				Match(T__4);
				}
				break;
			case 8:
				_localctx = new SubContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 28;
				Match(T__5);
				}
				break;
			case 9:
				_localctx = new NegContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 29;
				Match(T__6);
				}
				break;
			case 10:
				_localctx = new EqContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 30;
				Match(T__7);
				}
				break;
			case 11:
				_localctx = new GtContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 31;
				Match(T__8);
				}
				break;
			case 12:
				_localctx = new LtContext(_localctx);
				EnterOuterAlt(_localctx, 12);
				{
				State = 32;
				Match(T__9);
				}
				break;
			case 13:
				_localctx = new AndContext(_localctx);
				EnterOuterAlt(_localctx, 13);
				{
				State = 33;
				Match(T__10);
				}
				break;
			case 14:
				_localctx = new OrContext(_localctx);
				EnterOuterAlt(_localctx, 14);
				{
				State = 34;
				Match(T__11);
				}
				break;
			case 15:
				_localctx = new NotContext(_localctx);
				EnterOuterAlt(_localctx, 15);
				{
				State = 35;
				Match(T__12);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
